<resources>
    <string name="app_name">Structured Flash Cards</string>
    <string name="title_activity_deck_menu">DeckMenu</string>

    <!--    LOGIN MENU     -->
    <string name="login_menu_title"><u>Login Menu</u></string>
    <string name="login_menu_username">Username</string>
    <string name="login_menu_pass">Password</string>
    <string name="login_menu_submit">Submit</string>
    <string name="login_menu_create">Create Account</string>

    <!--    MENU ITEMS     -->
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_user">User</string>
    <string name="menu_card_create">Create Card</string>
    <string name="menu_card_view">View Cards</string>
    <string name="menu_deck_view">View Decks</string>

    <!--    Deck List recycler view    -->
    <string name="deck_list_default_front">null</string>
    <string name="deck_list_default_back">null</string>

    <!--    Create Deck/Card    -->
    <string name="deck_title_back">Back</string>
    <string name="deck_title_front">Front</string>
    <string name="deck_answer_hint">Answer</string>
    <string name="deck_question_hint">Question</string>
    <string name="deck_create_pick_id">Submit</string>

    <string-array name="deck_spinner">
        <item>Null</item>
    </string-array>

    <!--    Single Card View    -->
    <string name="card_single_front">Front</string>
    <string name="card_single_front_text">Null</string>
    <string name="card_single_back">Back</string>
    <string name="card_single_back_text">Null</string>
    <string name="card_single_update_btn">Update Card Value</string>
    <string name="card_single_delete_btn">Delete Card</string>


    <!--    User Settings    -->
    <string name="user_settings_name">Username: null</string>
    <string name="user_settings_avatar_desc">avatar</string>
    <!--    Navigation Drawer Title    -->
    <string name="menu_navigation_drawer_title">Structured Flash Cards</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Deck View items -->
    <string name="deck_list_item_description">Description: null</string>
    <string name="deck_list_item_id">id: </string>


</resources>
