<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/startContent"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/loginFragment"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_user" />
        <item
            android:id="@+id/createCardFragment"
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/menu_card_create" />
        <item
            android:id="@+id/checkCardList"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/menu_card_view" />
        <item
            android:id="@+id/checkDeckList"
            android:icon="@drawable/ic_baseline_collections_bookmark_24"
            android:title="@string/menu_deck_view" />

    </group>
</menu>