<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DeckFragment">


    <TextView
        android:id="@+id/deck_menu_front"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="15dp"
        android:text="@string/deck_title_front"
        android:textAlignment="center"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@+id/deck_menu_front_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/deck_menu_front_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="@string/deck_question_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/deck_menu_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deck_menu_front" />

    <TextView
        android:id="@+id/deck_menu_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="28dp"
        android:text="@string/deck_title_back"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/deck_menu_back_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deck_menu_front_input" />

    <EditText
        android:id="@+id/deck_menu_back_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="41dp"
        android:ems="10"
        android:hint="@string/deck_answer_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/deck_menu_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deck_menu_back" />

    <Spinner

        android:id="@+id/deck_menu_spinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:padding="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deck_menu_back_input" />

    <Button
        android:id="@+id/deck_menu_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/deck_create_pick_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deck_menu_spinner"
        app:layout_constraintVertical_bias="0.146" />


</androidx.constraintlayout.widget.ConstraintLayout>